// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover renders content 1`] = `
.c3 {
  background-color: #ffffff;
  width: 12px;
  height: 12px;
  position: absolute;
  left: 18px;
  bottom: 0;
  -webkit-transform: translateY(50%) rotate(45deg);
  -ms-transform: translateY(50%) rotate(45deg);
  transform: translateY(50%) rotate(45deg);
  box-shadow: 1px 1px 0 0 rgba(0,0,0,0.2);
}

.c2 {
  margin: 0;
  padding: 1rem;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid #d8d8d8;
  box-shadow: 0 3px 6px rgba(0,0,0,0.16),0 3px 6px rgba(0,0,0,0.23);
  display: none;
  position: absolute;
  z-index: 99;
  width: initial;
  height: initial;
  left: 0;
  bottom: 0;
  -webkit-transform: translateY(-56px);
  -ms-transform: translateY(-56px);
  transform: translateY(-56px);
}

.c0:hover .c2 {
  display: block;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
}

<div>
  <div
    className="c0 c1"
  >
    <h1>
      Trigger
    </h1>
    <div
      className="c2"
    >
      <p>
        Content
      </p>
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`Popover renders trigger 1`] = `
.c3 {
  background-color: #ffffff;
  width: 12px;
  height: 12px;
  position: absolute;
  left: 18px;
  bottom: 0;
  -webkit-transform: translateY(50%) rotate(45deg);
  -ms-transform: translateY(50%) rotate(45deg);
  transform: translateY(50%) rotate(45deg);
  box-shadow: 1px 1px 0 0 rgba(0,0,0,0.2);
}

.c2 {
  margin: 0;
  padding: 1rem;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid #d8d8d8;
  box-shadow: 0 3px 6px rgba(0,0,0,0.16),0 3px 6px rgba(0,0,0,0.23);
  display: none;
  position: absolute;
  z-index: 99;
  width: initial;
  height: initial;
  left: 0;
  bottom: 0;
  -webkit-transform: translateY(-56px);
  -ms-transform: translateY(-56px);
  transform: translateY(-56px);
}

.c0:hover .c2 {
  display: block;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
}

<div>
  <div
    className="c0 c1"
  >
    <h1>
      Trigger
    </h1>
    <div
      className="c2"
    >
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`Popover renders with custom padding 1`] = `
.c3 {
  background-color: #ffffff;
  width: 12px;
  height: 12px;
  position: absolute;
  left: 18px;
  bottom: 0;
  -webkit-transform: translateY(50%) rotate(45deg);
  -ms-transform: translateY(50%) rotate(45deg);
  transform: translateY(50%) rotate(45deg);
  box-shadow: 1px 1px 0 0 rgba(0,0,0,0.2);
}

.c0:hover .c4 {
  display: block;
}

.c0:hover .c5 {
  display: block;
}

.c0:hover .c6 {
  display: block;
}

.c2 {
  margin: 0;
  padding: 10rem;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid #d8d8d8;
  box-shadow: 0 3px 6px rgba(0,0,0,0.16),0 3px 6px rgba(0,0,0,0.23);
  display: none;
  position: absolute;
  z-index: 99;
  width: initial;
  height: initial;
  left: 0;
  bottom: 0;
  -webkit-transform: translateY(-56px);
  -ms-transform: translateY(-56px);
  transform: translateY(-56px);
}

.c0:hover .c2 {
  display: block;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
}

<div>
  <div
    className="c0 c1"
  >
    <h1>
      Trigger
    </h1>
    <div
      className="c2"
    >
      <p>
        Content
      </p>
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`Popover renders with fixed height 1`] = `
.c3 {
  background-color: #ffffff;
  width: 12px;
  height: 12px;
  position: absolute;
  left: 18px;
  bottom: 0;
  -webkit-transform: translateY(50%) rotate(45deg);
  -ms-transform: translateY(50%) rotate(45deg);
  transform: translateY(50%) rotate(45deg);
  box-shadow: 1px 1px 0 0 rgba(0,0,0,0.2);
}

.c0:hover .c4 {
  display: block;
}

.c0:hover .c5 {
  display: block;
}

.c2 {
  margin: 0;
  padding: 1rem;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid #d8d8d8;
  box-shadow: 0 3px 6px rgba(0,0,0,0.16),0 3px 6px rgba(0,0,0,0.23);
  display: none;
  position: absolute;
  z-index: 99;
  width: initial;
  height: 100px;
  left: 0;
  bottom: 0;
  -webkit-transform: translateY(-56px);
  -ms-transform: translateY(-56px);
  transform: translateY(-56px);
}

.c0:hover .c2 {
  display: block;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
}

<div>
  <div
    className="c0 c1"
  >
    <h1>
      Trigger
    </h1>
    <div
      className="c2"
    >
      <p>
        Content
      </p>
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`Popover renders with fixed width 1`] = `
.c3 {
  background-color: #ffffff;
  width: 12px;
  height: 12px;
  position: absolute;
  left: 18px;
  bottom: 0;
  -webkit-transform: translateY(50%) rotate(45deg);
  -ms-transform: translateY(50%) rotate(45deg);
  transform: translateY(50%) rotate(45deg);
  box-shadow: 1px 1px 0 0 rgba(0,0,0,0.2);
}

.c0:hover .c4 {
  display: block;
}

.c2 {
  margin: 0;
  padding: 1rem;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid #d8d8d8;
  box-shadow: 0 3px 6px rgba(0,0,0,0.16),0 3px 6px rgba(0,0,0,0.23);
  display: none;
  position: absolute;
  z-index: 99;
  width: 100px;
  height: initial;
  left: 0;
  bottom: 0;
  -webkit-transform: translateY(-56px);
  -ms-transform: translateY(-56px);
  transform: translateY(-56px);
}

.c0:hover .c2 {
  display: block;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
}

<div>
  <div
    className="c0 c1"
  >
    <h1>
      Trigger
    </h1>
    <div
      className="c2"
    >
      <p>
        Content
      </p>
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;
